# unreal-pak-mod-manager

./: Cargo.toml  README.md
.github/workflows/: release.yaml
example/: config.toml  example_modpack.pak  upmm_modpack.pak
example/mods/: zzzz_Grok_Boar-40pHP_P.pak  zzzzzz_Grok_Economy_Difficulty_Fix_P.pak
example/mods/add_mutant/: bloodsucker.cfg
example/mods/blind_dog/Stalker2/Content/GameLite/GameData/AbilityPrototypes/: BlindDogAbilities.cfg
example/mods/decrease_health_again/Stalker2/Content/GameLite/GameData/ObjPrototypes/: Bloodsucker.cfg
example/mods/increment_b/: abc.json
example/mods/ini_abc/: abc.ini
example/mods/ini_increment_b/: abc.ini
example/mods/ini_increment_c/: abc.ini
example/mods/pda_tut/: PDATutorialPrototypes.cfg
example/raw/add_mutant/: bloodsucker.cfg
example/raw/decrease_health/: bloodsucker.cfg
example/raw/increment_c/: abc.json
example/staging/: PDATutorialPrototypes.cfg  abc.ini  abc.json  bloodsucker.cfg
example/staging/Stalker2/Content/GameLite/GameData/: CombatSynchronization.cfg  DifficultyPrototypes.cfg  ItemGeneratorPrototypes.cfg  StashPrototypes.cfg
example/staging/Stalker2/Content/GameLite/GameData/AbilityPrototypes/: BlindDogAbilities.cfg
example/staging/Stalker2/Content/GameLite/GameData/ObjPrototypes/: Boar.cfg
example/upmm_modpack/: abc.json
src/: cfg_parser.rs  git.rs  gsc_cfg.rs  main.rs  merge.rs  stalker2_cfg.rs  unreal_ini.rs
