[package]
name = "unreal-pak-mod-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.19.0"
indexmap = { version = "2.6.0", features = ["serde"] }
json-patch = "3.0.1"
nom = "7.1.3"
path-slash = "0.2.1"
repak = { git = "https://github.com/trumank/repak", version = "0.2.2" }
serde = "1.0.215"
serde_json = {version = "1.0.133", features = ["preserve_order"]}
slotmap = { version = "1.0.7", features = ["serde"] }
toml = "0.8.19"
